--- a/9.QR code Generator/style.css
+++ b/9.QR code Generator/style.css
@@ -4,11 +4,9 @@
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
 body{
     background-color: #262a2f;
 }
-
 .container{
     width: 400px;
     padding: 25px 35px;
@@ -19,13 +17,11 @@ body{
     background-color: white;
     border-radius: 10px;
 }
-
 .container p{
     font-weight: 600;
     font-size: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
-
 .container input{
     width: 100%;
     height: 50px;
@@ -35,8 +31,7 @@ body{
     margin: 10px 0 20px;
     border-radius: 5px;
 }
-
-.container button{
+ .container button{
     width: 100%;
     height: 50px;
     background: #494eea;
@@ -49,17 +44,40 @@ body{
     margin: 20px 0 ;
     font-weight: 500;
 }
-
-#imgBox{
-    display: flex;
-justify-content: center;
-align-items: center;
-    padding: 15px;
+ #imgBox{
+   width: 200px;
+   border-radius: 5px;
+   max-height: 0 ;
+    overflow: hidden;
+    transition: max-height linear 1s;
 }
-
-#imgBox{
-    border: 2px solid transparent;
+#imgBox img {
+    width:  100%;
+    padding: 10px;
 }
-#imgBox:hover{
-    border: 2px solid black;
+#imgBox.show-img{
+    max-height:300px;
+    margin: 10px auto;
+    border: 1px solid #d1d1d1;
 }
+.error{
+    animation: shake 0.1s linear 10;
+}
+@keyframes shake {
+    0%{
+        transform: translateX(0);
+    }
+    25%{
+        transform: translateX(-2);
+    }
+    50%{
+        transform: translateX(0);
+    }
+    75%{
+        transform: translateX(2px);
+    }
+    100%{
+        transform: translateX(0);
+    } 
+    
+} 
